# proto-rs

./: .gitignore  .todo  CHANGELOG.md  Cargo.toml  LICENCE  README.MD  README.md  REFERENCE_SUPPORT.md  bench.sh  complex_expanded_prost.rs  complex_expanded_proto.rs  rustfmt.toml  test.proto
benches/: bench.md  encoding.rs  varint.rs
benches/bench_runner/: Cargo.toml
benches/bench_runner/benches/: main_bench.rs
build_protos/protos/build_system_test/: custom_types.proto  lru_types.proto
crates/prosto_derive/: Cargo.toml  test_me
crates/prosto_derive/src/: emit_proto.rs  generic_substitutions.rs  impl_proto_ident.rs  lib.rs  parse.rs  proto_dump.rs  proto_import.rs  proto_message.rs  proto_rpc.rs  schema.rs  utils.rs  write_file.rs
crates/prosto_derive/src/proto_message/: complex_enum_handler.rs  complex_enums.rs  encoding.rs  enum_handler.rs  enums.rs  generic_bounds.rs  mod.rs  struct_handler.rs  structs.rs  unified_field_handler.rs  utils.rs
crates/prosto_derive/src/proto_message/enum_handler/: complex_enum_handler.rs
crates/prosto_derive/src/proto_message_old_helpers/: complex_enum_handler.rs  struct_handler.rs  unified_field_handler.rs
crates/prosto_derive/src/proto_rpc/: client.rs  generic_helpers.rs  proto.rs  rpc_common.rs  server.rs  utils.rs
crates/prosto_derive/src/utils/: array_handling.rs  enum_handling.rs  field_handling.rs  string_helpers.rs  type_conversion.rs  type_info.rs
docs/: rpc_client_ctx.md
examples/: complex.rs  generic_macros.rs  generic_rpc_test.rs  mutex_wrappers.rs  prosto_proto.rs  proto_gen_example.rs  proto_import_all_from.rs  rpc_interceptor.rs
proptest-regressions/: encoding.txt
protos/: atomic_test.proto  block_razor_rpc.proto  bloxroute.proto  cache_padded_test.proto  chrono.proto  chrono_test.proto  fastnum.proto  fastnum_test.proto  generated.proto  jito.proto  next_block.proto  proto_dump.proto  solana.proto  solana_test.proto  teloxide.proto  test.proto  vec_test.proto
protos/bench/: complex.proto
protos/build_system_test/: atomic_types.proto  custom_types.proto  extra_types.proto  goon_types.proto  lru_types.proto  sigma_rpc_simple.proto
protos/gen_complex_proto/: extra_types.proto  goon_types.proto  rizz_types.proto  sigma_rpc.proto  sigma_rpc_complex.proto  sigma_rpc_simple.proto
protos/gen_proto/: goon_types.proto  import_all_from_rpc.proto  interceptor_rpc.proto  rizz_types.proto  sigma_rpc.proto  types.proto
protos/ref_proto/: goon_types.proto  rizz_types.proto  sigma_rpc.proto
protos/showcase_proto/: show.proto
protos/tests/: advanced_features.proto  arc_swap.proto  borrowed_enum.proto  complex_rpc.proto  custom_fastnum.proto  custom_solana.proto  encoding.proto  generic_test.proto  generic_test_service.proto  mixed_roundtrip.proto  mutex.proto  mutex_example.proto  nonzero_types.proto  papaya.proto  validation.proto  validation_with_ext.proto  vecdeque.proto
protos_ref/: goon_types.proto  rizz_types.proto  sigma_rpc.proto  solana.proto
src/: arrays.rs  client.rs  coders.rs  custom_types.rs  encoding.rs  error.rs  ideas.rs  lib.rs  message.rs  name.rs  schemas.rs  tonic.rs  traits.rs  types.rs  wrappers.rs  zero_copy.rs
src/custom_rpc/: block_razor.rs  bloxroute.rs  jito.rs  mod.rs  next_block.rs
src/custom_types/: chrono.rs  fastnum.rs  hashers.rs  solana.rs  teloxide.rs  well_known.rs
src/custom_types/fastnum/: common.rs  signed.rs  unsigned.rs
src/custom_types/solana/: address.rs  common.rs  hash.rs  instruction.rs  keypair.rs  signature.rs  tx_errors.rs
src/encoding/: bytes_adapter.rs  length_delimiter.rs  map.rs  primitives.rs  varint.rs  wire_type.rs
src/fastnum/: signed.rs  unsigned.rs
src/schemas/: proto_output.rs  rust_client.rs  utils.rs
src/tonic/: req.rs  resp.rs  stream.rs  zero.rs
src/traits/: buffer.rs  decode.rs  encode.rs  example_impl.rs  utils.rs
src/types/: fastnum.rs  solana.rs
src/types/fastnum/: signed.rs
src/types/solana/: address.rs  signature.rs
src/wrappers/: arc_swap.rs  arcs.rs  arrays.rs  boxes.rs  cache_padded.rs  conc_map.rs  conc_set.rs  lists.rs  maps.rs  mod.rs  mutexes.rs  options.rs  sets.rs  vecs.rs
src/wrappers/lists/: arrays.rs  btree.rs  conc_set.rs  deque.rs  hash_set.rs  mod.rs  vec.rs
src/wrappers/maps/: btree.rs  conc_map.rs  hash_map.rs  mod.rs
tests/: advanced_roundtrip.rs  arc_swap_roundtrip.rs  custom_type_fields.rs  encoding_messages.rs  encoding_roundtrip.rs  generic_message.rs  generic_types_test.rs  generics.rs  getter_reference.rs  map_primitives.rs  mutex_roundtrip.rs  nonzero_roundtrip.rs  papaya_roundtrip.rs  reference_sun.rs  roundtrip.rs  rpc_integration.rs  sun_ir_encode_conversion.rs  sun_ir_owned.rs  tonic_zero_copy.rs  transparent.rs  validation.rs  validation_with_ext.rs  vecdeque_roundtrip.rs
tests/proto_build_test/: Cargo.toml
tests/proto_build_test/build_protos/protos/: fastnum.proto  solana.proto
tests/proto_build_test/build_protos/protos/build_system_test/: atomic_types.proto  custom_types.proto  extra_types.proto  goon_types.proto  lru_types.proto  sigma_rpc_simple.proto
tests/proto_build_test/build_protos/protos/gen_complex_proto/: extra_types.proto  goon_types.proto  rizz_types.proto  sigma_rpc.proto  sigma_rpc_simple.proto
tests/proto_build_test/build_protos_combo/protos/build_system_test/: rizz_types.proto
tests/proto_build_test/build_protos_same_file/protos/build_system_test/: getter_types.proto
tests/proto_build_test/src/: client.rs  combo_atomic_split.rs  combo_goon.rs  lib.rs  main.rs  multi_mod_same_file.rs
tests/proto_rs_test/: Cargo.toml  build.rs
tests/proto_rs_test/src/: main.rs
tests/tonic_prost_test/: Cargo.toml  build.rs
tests/tonic_prost_test/src/: lib.rs  main.rs
