[workspace]
members = [
  "crates/prosto_derive",
  "tests/tonic_prost_test",
  "tests/proto_rs_test",
  "tests/proto_build_test",
  "benches/bench_runner",
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Ivan Auwers <vonauwers@gmail.com>"]
description = "Rust-first gRPC macros collection for .proto/protobufs managment and more"
license = "MIT OR Apache-2.0"
repository = "https://github.com/4r33x/proto_rs"
homepage = "https://github.com/4r33x/proto_rs"
readme = "README.md"
keywords = ["grpc", "protobufs", "proto", "tonic", "prost"]
categories = [
  "network-programming",
  "development-tools",
  "development-tools::build-utils",
  "rust-patterns",
]

[workspace.dependencies]
prosto_derive = { version = "0.6.18", path = "crates/prosto_derive" }
proto_rs = { version = "0.6.18", path = "./" }
prost = { version = "0.14", default-features = false }
bytes = { version = "1.11.0", default-features = false }
inventory = { version = "0.3" }
chrono = "0.4"
criterion = { version = "0.7" }
tonic = { version = "0.14.2" }

[workspace.lints.clippy]
#cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
#restriction = { level = "warn", priority = -1 }
style = { level = "deny", priority = -1 }

[workspace.lints.rust]
unsafe_code = { level = "forbid", priority = 0 }

[package]
name = "proto_rs"
version = "0.6.18"
description = "Rust-first gRPC macros collection for .proto/protobufs managment and more"
documentation = "https://docs.rs/proto_rs"
readme = "README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
prosto_derive.workspace = true
bytes.workspace = true
tonic = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
fastnum = { version = "0.7.4", optional = true }
crossbeam-utils = { version = "0.8", optional = true }
inventory = { workspace = true, optional = true }
solana-address = { version = "2", optional = true }
solana-instruction-error = { version = "2.1", optional = true }
solana-keypair = { version = "3.1", optional = true }
solana-signature = { version = "3.1", optional = true }
solana-transaction-error = { version = "3.0", optional = true }
const_panic = { version = "0.2.15", features = [
  "rust_latest_stable",
  "derive",
] }
arc-swap = { version = "1.8", optional = true }
papaya = { version = "0.2.3", optional = true }
parking_lot = { version = "0.12", optional = true }


[dev-dependencies]
proptest = "1.9"
rand = "0.9"
criterion.workspace = true
tonic.workspace = true
tonic-prost = "0.14.2"
prost.workspace = true

tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono.workspace = true
tonic_prost_test = { path = "tests/tonic_prost_test" }


[features]
std = ["bytes/std"]
tonic = ["dep:tonic", "bytes/std", "std"]
fastnum = ["dep:fastnum"]
cache_padded = ["dep:crossbeam-utils"]
solana = [
  "dep:solana-address",
  "dep:solana-instruction-error",
  "dep:solana-keypair",
  "dep:solana-signature",
  "dep:solana-transaction-error",
]
chrono = ["dep:chrono"]
# Lock-free atomic Arc wrappers
arc_swap = ["dep:arc-swap"]
# Concurrent papaya collections
papaya = ["dep:papaya"]
# Mutex wrappers backed by parking_lot
parking_lot = ["dep:parking_lot"]
# Schema collection for build scripts
build-schemas = ["inventory"]
# Enable live proto dumping
emit-proto-files = ["prosto_derive/emit-proto-files"]

# Compile on the stable toolchain
stable = ["prosto_derive/stable"]

no-recursion-limit = []
#TODO!
default = ["std", "tonic"]
#derive = ["dep:prost-derive"]






# [lints.rust]
# unsafe_code = { level = "forbid", priority = 0 }



[lints.clippy]
#cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
#restriction = { level = "warn", priority = -1 }
style = { level = "deny", priority = -1 }



[profile.bench]
#use thin here to improve compile time
lto = "fat"
opt-level = 3
codegen-units = 1
incremental = false


[[bench]]
name = "varint"
harness = false
