[package]
name = "prosto_derive"
version = "0.6.16"
description = "Procedural macros for proto_rs, Rust as a first-class citizen in the protobuf ecosystem"
documentation = "https://docs.rs/prosto_derive"
readme = "../../README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[features]
# Emission control - checked in utils.rs during macro expansion
emit-proto-files = []
stable = []

[lints]
workspace = true
