[package]
name = "prosto_derive"
version = "0.11.21"
authors.workspace = true
edition.workspace = true
description = "Procedural macros for proto_rs, Rust as a first-class citizen in the protobuf ecosystem"
documentation = "https://docs.rs/prosto_derive"
readme = "../../README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "visit-mut"] }

[features]
# Emission control - checked in utils.rs during macro expansion
emit-proto-files = []
stable = []
tonic = []

[lints]
workspace = true
