[package]
name = "proto_build_test"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
proto_rs = { workspace = true, features = ["build-schemas", "fastnum", "solana"] }
inventory = "0.3.21"
fastnum  = { version = "0.7.4" }
solana-signature = { version= "3.1.0" }


[features]
default = ["build-schemas"]
build-schemas = []
