[package]
name = "proto_build_test"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
proto_rs = { workspace = true, features = ["build-schemas", "fastnum", "solana", "papaya", "parking_lot", "chrono"] }
chrono = { workspace = true }
inventory = "0.3.21"
fastnum  = { version = "0.7.4" }
papaya = "0.2.3"
parking_lot = "0.12.5"

[features]
default = ["build-schemas"]
build-schemas = []
